--- a/notebooks/invitro.ipynb
+++ b/notebooks/invitro.ipynb
@@ -5,7 +5,7 @@
    "id": "ec799eec-cc1c-40ed-8418-9a25708f77db",
    "metadata": {},
    "source": [
-    "## Here we'll try to replicate the results of Venturelli et al, measuring butyrate production in synthetically constructed _in vitro_ communities"
+    "## Here we'll try to replicate the results of Venturelli et al, measuring butyrate production in synthetically constructed _in vitro_ communities. We'll hope to see that predictions of butyrate production from MICOM constructed community models accurately reflect the measured butyrate production from the experiments. "
    ]
   },
   {
@@ -23,6 +23,7 @@
     "import numpy as np\n",
     "import scipy\n",
     "import micom\n",
+    "import micom.measures\n",
     "import warnings\n",
     "warnings.simplefilter(action='ignore')\n",
     "%matplotlib inline"
@@ -35,7 +36,7 @@
     "tags": []
    },
    "source": [
-    "## Function for building our taxonomies"
+    "## Function for building our taxonomies, which accepts an abundance dataframe of taxonomic fractions measured in the experiments. "
    ]
   },
   {
@@ -47,22 +48,28 @@
    },
    "outputs": [],
    "source": [
-    "def build_all(taxa):\n",
+    "def build_table(taxa):\n",
+    "    #first, define an empty taxonomy dataframe, which we will use to build models\n",
     "    taxonomy = pd.DataFrame()\n",
-    "    for x in tqdm(taxa.index):\n",
-    "        sample = taxa.loc[x] #find the row with abundances \n",
-    "        sample = sample.index.to_list() #only want those taxa with abundance of 1% or more\n",
-    "        names = \",\".join([x[:2] for x in sample]).split(',') #get taxa name\n",
+    "    #we'll iterate through the taxonomic data provided, and append individual taxonomic abundances to our taxonomy table\n",
+    "    for x in tqdm(taxa.index): \n",
+    "        #find the row corresponding to the sample of interest in the abundance dataframe\n",
+    "        sample = taxa.loc[x].index.to_list()\n",
+    "        #isolate the genera abbreviations, and put into a list\n",
+    "        names = \",\".join([x[:2] for x in sample]).split(',')\n",
+    "        #now we map the abbreviations to the file list (see next cell) to find the GSMs for each \n",
     "        file = list(map(genera.get,names))#map to AGORA db dictionary \n",
+    "        #navigate to the AGORA database directory\n",
     "        os.chdir('/proj/gibbons/nbohmann/exvivo/databases/agora103_genus/data/')\n",
+    "        #now we'll put together a pandas Series to concatenate with the taxonomy table\n",
     "        sample_taxa = pd.DataFrame({ \n",
-    "            \"id\": names,\n",
-    "            \"abundance\":taxa.loc[x],\n",
-    "            \"file\": file,\n",
-    "            \"sample_id\":x})\n",
-    "        sample_taxa = sample_taxa.dropna(how = 'any')\n",
-    "        sample_taxa['file'] = '/proj/gibbons/nbohmann/exvivo/databases/agora103_genus/data/'+sample_taxa['file']\n",
-    "        taxonomy = taxonomy.append(sample_taxa, ignore_index = True)\n",
+    "            \"id\": names, #genus abbreviations \n",
+    "            \"abundance\":taxa.loc[x], #genus abundances\n",
+    "            \"file\": file, #genus JSON file\n",
+    "            \"sample_id\":x}) #sample ID\n",
+    "        sample_taxa = sample_taxa.dropna(how = 'any') #drop any rows with empty values\n",
+    "        sample_taxa['file'] = '/proj/gibbons/nbohmann/exvivo/databases/agora103_genus/data/'+sample_taxa['file'] #append a directory prefix to the file column\n",
+    "        taxonomy = pd.concat([taxonomy,sample_taxa]) #concate the series onto the taxonomy table\n",
     "    return taxonomy"
    ]
   },
@@ -73,7 +80,7 @@
     "tags": []
    },
    "source": [
-    "## Let's start by initializing our dictionary of genera abbreviations"
+    "## Let's start by initializing our dictionary of genera abbreviations, since the taxa are given by two letter abbreviations in the abundance dataframe. The taxa in the experiement are given at the species level, but for consistency we will build models at the genus level. Therefore, some duplicates will be seen in this dict"
    ]
   },
   {
@@ -117,7 +124,7 @@
     "tags": []
    },
    "source": [
-    "## Let's pull up the primary dataframe with abundances, ODs, and SCFAs. We'll add a column with richness measures. "
+    "## Let's pull up the primary dataframe with abundances, ODs, and SCFAs. This can be found at https://github.com/RyanLincolnClark/DesignSyntheticGutMicrobiomeAssemblyFunction/commonfiles\n"
    ]
   },
   {
@@ -128,15 +135,23 @@
    "outputs": [],
    "source": [
     "os.chdir('/proj/gibbons/nbohmann/exvivo/venturelli_2021/')\n",
+    "#read in the dataframe\n",
     "main = pd.read_csv('masterDF.csv',index_col=0) #get the dataframe\n",
+    "#drop HB - abbreviation not given in manuscript\n",
     "main = main.drop(columns = 'HB')\n",
+    "#for columns 11:37, which represent binary presence/absence as a 1 or 0 for each species, we fill in zeros for NAs. \n",
     "main[main.columns[11:37]] = main[main.columns[11:37]].fillna(0).astype('int')\n",
+    "#we can calculate richness of each sample by summing these presence/absence numbers\n",
     "main['richness'] = main[main.columns[11:37]].sum(axis = 1)\n",
+    "#also isolate the plate, column, and run ID for each row. These will serve as sample IDs for each individual sample\n",
     "main['Plate'] = main['Plate'].astype('str').str.split('.').str[0].apply(lambda x: x.zfill(2))\n",
     "main['Column'] = main['Column'].astype('str').str.split('.').str[0].apply(lambda x: x.zfill(2))\n",
     "main['Run'] = main['Sequencing Run'].str[-3:]\n",
+    "#designate the sample ID\n",
     "main['sample_id'] = 'P'+main['Plate']+main['Row']+main['Column']+'_'+main['Run']\n",
-    "main = main[main['Contamination?']=='No'] #no contaminants\n",
+    "#remove any samples that have contamination\n",
+    "main = main[main['Contamination?']=='No']\n",
+    "#set the index as the sample ID\n",
     "main.set_index('sample_id',inplace = True)\n",
     "main = main[~main.index.duplicated(keep = 'last')]"
    ]
@@ -159,12 +174,26 @@
    "outputs": [],
    "source": [
     "os.chdir('/proj/gibbons/nbohmann/exvivo/venturelli_2021/')\n",
-    "medium = pd.read_excel('DM38_components.xlsx') #load the df\n",
-    "medium = medium.rename(columns={'Component':'reaction','Concentration (mM)':'flux'}) #easy renaming\n",
-    "medium.reaction = 'EX_' + medium.reaction + '_m' #reaction column\n",
-    "medium = medium.append({'reaction':'EX_fe3_m','flux':0.50},ignore_index=True) #higher iron conc. seems to be necessary for growth\n",
-    "medium['index'] = medium['reaction']\n",
-    "medium.set_index('index',inplace = True)"
+    "#load the components of the medium\n",
+    "medium = pd.read_excel('DM38_components.xlsx')\n",
+    "#rename the columns of the medium for simplicity\n",
+    "medium = medium.rename(columns={'Component':'metabolite','Concentration (mM)':'flux'}) \n",
+    "#for use in MICOM, we need to add a prefix and suffix to each entry in the reaction column\n",
+    "medium['reaction'] = 'EX_' + medium['metabolite'] + '_m' #reaction column\n",
+    "#previous work showed that iron is needed for growth, so we'll add that to the medium\n",
+    "medium = medium.append({'reaction':'EX_fe3_m','flux':0.50},ignore_index=True)\n",
+    "# medium.set_index('reaction',inplace = True)\n",
+    "medium"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6f382b73-a610-4f18-b222-39007889d65f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "taxa_low"
    ]
   },
   {
@@ -184,13 +213,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "low = main[(main['richness'].astype('int') <=10)] #lets focus on 1-5 species communities. \n",
+    "#isolate table to low richness\n",
+    "low = main[(main['richness'].astype('int') <=5)] \n",
+    "#now let's isolate those columns that have fractional abundance of taxa\n",
     "taxa_low = [cols for cols in low.columns if 'Fraction' in cols] #df with the taxa present in each community\n",
+    "#drop B.cereus - not included in paper\n",
     "taxa_low = low[taxa_low].drop(columns = ['B.cereus Fraction'])\n",
-    "taxa_low = taxa_low.round(4).dropna(how='all')\n",
+    "#isolate the optical density and measured butyrate of each sample and convert to a dict for future use\n",
     "OD_low = low['OD'].to_dict()\n",
     "meas_but_low = low['Butyrate'].to_dict()\n",
-    "meas_ac_low = low['Acetate'].to_dict()\n",
     "low"
    ]
   },
@@ -212,9 +243,13 @@
    "outputs": [],
    "source": [
     "os.chdir('/proj/gibbons/nbohmann/exvivo/venturelli_2021/')\n",
-    "taxonomy = build_all(taxa_low)\n",
+    "#use the build table function to construct a taxonomy table\n",
+    "taxonomy = build_table(taxa_low) \n",
+    "#build the models from the taxonomy table with a cutoff of 0.001\n",
     "manifest_low = micom.workflows.build(taxonomy, out_folder='/proj/gibbons/nbohmann/exvivo/venturelli_2021/low_richness',\n",
-    "                                  model_db = None, cutoff=0.001, threads=10)"
+    "                                  model_db = None, cutoff=0.001, threads=10)\n",
+    "\n",
+    "#model_db equals none since we have included the file path for each GSM in the taxonomy table"
    ]
   },
   {
@@ -222,7 +257,7 @@
    "id": "f6798c3b-1617-456e-9572-9ffeddb08951",
    "metadata": {},
    "source": [
-    "### Grow the models for low richness communities"
+    "### Now that they are built, let's grow the low richness models with our DM38 medium"
    ]
   },
   {
@@ -232,17 +267,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Read the manifest produced above\n",
     "manifest_low = pd.read_csv('/proj/gibbons/nbohmann/exvivo/venturelli_2021/low_richness/manifest.csv')\n",
+    "#grow the models, using the medium and a tradeoff value of 0.7\n",
     "growth = micom.workflows.grow(manifest_low,'/proj/gibbons/nbohmann/exvivo/venturelli_2021/low_richness',medium,\n",
     "                           tradeoff = 0.7, threads = 10)\n",
-    "exchanges = growth.exchanges\n",
-    "exchanges = (exchanges[exchanges.direction == \"export\"].groupby([\"sample_id\",\"metabolite\", \"reaction\"])\n",
-    "         .apply(lambda df: sum(df.flux * df.abundance)).reset_index())\n",
-    "but_low = exchanges[exchanges.reaction.str.startswith('EX_but(e)')].rename(columns = {0:'predicted'})\n",
+    "#isolate exchanges, and multiply the fluxes by abundances for absolute production\n",
+    "exchanges = micom.measures.production_rates(growth)\n",
+    "but_low = exchanges[exchanges.reaction.str.startswith('EX_but(e)')].rename(columns = {'flux':'predicted'})\n",
+    "#map the optical density of each sample onto the dataframe\n",
     "but_low['OD'] = but_low['sample_id'].map(OD_low)\n",
+    "#scale the measured value by the optical density as a proxy for flux per dry cell weight\n",
     "but_low['measured'] = but_low['sample_id'].map(meas_but_low)/but_low['OD']\n",
-    "but_low = but_low[but_low['measured']>=0.0]\n",
-    "but_low = but_low[but_low['measured']<=100.0]"
+    "but_low"
    ]
   },
   {
@@ -277,6 +314,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5c809902-1047-4dfd-b71b-6f502903891b",
+   "metadata": {},
+   "source": [
+    "### Use Pearson correlation to test relationship between measured and predicted values"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "19fc81e1-a30c-4846-a132-281a7904dc78",
@@ -292,7 +337,7 @@
    "id": "25774a81-1ab9-454a-bbcd-d9c014740e0e",
    "metadata": {},
    "source": [
-    "## Now, high richness models"
+    "## Now, we'll repeat this for high richness models, with 11-25 taxa per community"
    ]
   },
   {
@@ -302,13 +347,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "high = main[(main['richness'].astype('int')>=10)] #lets focus on 3-5 species communities. \n",
-    "taxa_high = [cols for cols in high.columns if 'Fraction' in cols] #df with the taxa present in each community\n",
+    "#filter to high richness\n",
+    "high = main[(main['richness'].astype('int')>=10)] \n",
+    "#get fractional abundances\n",
+    "taxa_high = [cols for cols in high.columns if 'Fraction' in cols] \n",
+    "#drop b. cereus\n",
     "taxa_high = high[taxa_high].drop(columns = ['B.cereus Fraction'])\n",
-    "taxa_high = taxa_high.round(4).dropna(how='all')\n",
+    "#create dicts for optical density, butyrate\n",
     "OD_high = high['OD'].to_dict()\n",
-    "meas_but_high = high['Butyrate'].to_dict()\n",
-    "meas_ac_high = high['Acetate'].to_dict()"
+    "meas_but_high = high['Butyrate'].to_dict()"
    ]
   },
   {
@@ -327,7 +374,9 @@
    "outputs": [],
    "source": [
     "os.chdir('/proj/gibbons/nbohmann/exvivo/venturelli_2021/')\n",
-    "taxonomy = build_all(taxa_high)\n",
+    "#build the taxonomy table using the build_table function\n",
+    "taxonomy = build_table(taxa_high)\n",
+    "#build models with a cutoff of 0.001\n",
     "manifest_high = micom.workflows.build(taxonomy, out_folder=\"/proj/gibbons/nbohmann/exvivo/venturelli_2021/high_richness\",\n",
     "                                  model_db = None, cutoff=0.001, threads=20)"
    ]
@@ -348,13 +397,13 @@
    "outputs": [],
    "source": [
     "os.chdir('/proj/gibbons/nbohmann/exvivo/venturelli_2021/')\n",
+    "#load the manifest for the high richness communities\n",
     "manifest_high = pd.read_csv('/proj/gibbons/nbohmann/exvivo/venturelli_2021/high_richness/manifest.csv')\n",
+    "#grow the models with the DM38 medium and a tradeoff of 0.7\n",
     "growth = micom.workflows.grow(manifest_high,'/proj/gibbons/nbohmann/exvivo/venturelli_2021/high_richness',medium,\n",
     "                           tradeoff = 0.7, threads = 10)\n",
-    "exchanges = growth.exchanges\n",
-    "exchanges = (exchanges[exchanges.direction == \"export\"].groupby([\"sample_id\",\"metabolite\", \"reaction\"])\n",
-    "         .apply(lambda df: sum(df.flux * df.abundance)).reset_index())\n",
-    "but_high = exchanges[exchanges.reaction.str.startswith('EX_but(e)')].rename(columns = {0:'predicted'})\n",
+    "exchanges = micom.measures.production_rates(growth)\n",
+    "but_high = exchanges[exchanges.reaction.str.startswith('EX_but(e)')].rename(columns = {'flux':'predicted'})\n",
     "but_high['OD'] = but_high['sample_id'].map(OD_high)\n",
     "but_high['measured'] = but_high['sample_id'].map(meas_but_high)/but_high['OD']"
    ]
@@ -389,12 +438,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "89dbb9d2-8454-4f04-9e99-74ef441def90",
+   "metadata": {},
+   "source": [
+    "### Use Pearson correlation to test relationship between measured and predicted values"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "9f670e69-9cc7-41d2-9d87-6a0de4174c6a",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Check the pearson correlation statistics\n",
     "rho, p = scipy.stats.pearsonr(but_high['measured'], but_high['predicted'])\n",
     "p"
    ]
@@ -404,7 +462,7 @@
    "id": "82317805-6cb2-486c-9135-d049ed9b2428",
    "metadata": {},
    "source": [
-    "## Save results"
+    "## Save the resulting dataframes for low and high richness communities for use in building the final figures"
    ]
   },
   {
