fixed links in invitro notebook

--- a/notebooks/invitro.ipynb
+++ b/notebooks/invitro.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "09f49570-1c70-4d0b-9370-2c8f869facf9",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "ad0d35c7-d77b-4fea-8cfc-3a6359a0cf32",
    "metadata": {
     "tags": []
@@ -58,9 +58,7 @@
     "        #isolate the genera abbreviations, and put into a list\n",
     "        names = \",\".join([x[:2] for x in sample]).split(',')\n",
     "        #now we map the abbreviations to the file list (see next cell) to find the GSMs for each \n",
-    "        file = list(map(genera.get,names))#map to AGORA db dictionary \n",
-    "        #navigate to the AGORA database directory\n",
-    "        os.chdir('/proj/gibbons/nbohmann/exvivo/databases/agora103_genus/data/')\n",
+    "        file = list(map(genera.get,names))\n",
     "        #now we'll put together a pandas Series to concatenate with the taxonomy table\n",
     "        sample_taxa = pd.DataFrame({ \n",
     "            \"id\": names, #genus abbreviations \n",
@@ -68,7 +66,6 @@
     "            \"file\": file, #genus JSON file\n",
     "            \"sample_id\":x}) #sample ID\n",
     "        sample_taxa = sample_taxa.dropna(how = 'any') #drop any rows with empty values\n",
-    "        sample_taxa['file'] = '/proj/gibbons/nbohmann/exvivo/databases/agora103_genus/data/'+sample_taxa['file'] #append a directory prefix to the file column\n",
     "        taxonomy = pd.concat([taxonomy,sample_taxa]) #concate the series onto the taxonomy table\n",
     "    return taxonomy"
    ]
@@ -85,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "e8da0bc6-a8fa-48dc-bec3-8bec22607c30",
    "metadata": {},
    "outputs": [],
@@ -129,14 +126,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "0ba07a39-925c-43f4-8f7c-97f04971d82d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.chdir('/proj/gibbons/nbohmann/exvivo/venturelli_2021/')\n",
+    "os.chdir('../data')\n",
     "#read in the dataframe\n",
-    "main = pd.read_csv('masterDF.csv',index_col=0) #get the dataframe\n",
+    "main = pd.read_csv('abundanceDF.csv',index_col=0) #get the dataframe\n",
     "#drop HB - abbreviation not given in manuscript\n",
     "main = main.drop(columns = 'HB')\n",
     "#for columns 11:37, which represent binary presence/absence as a 1 or 0 for each species, we fill in zeros for NAs. \n",
@@ -163,37 +160,144 @@
     "tags": []
    },
    "source": [
-    "## Lets also pull up the componentized diet dataframe, adding iron as we found previously this is required for growth!"
+    "## Lets also pull up the componentized diet dataframe"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "c0d19de0-0fef-461f-aca8-e8e634b38eff",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>metabolite</th>\n",
+       "      <th>flux</th>\n",
+       "      <th>reaction</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>cl</td>\n",
+       "      <td>4.300000</td>\n",
+       "      <td>EX_cl_m</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ca2</td>\n",
+       "      <td>1.290106</td>\n",
+       "      <td>EX_ca2_m</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>cu2</td>\n",
+       "      <td>0.010000</td>\n",
+       "      <td>EX_cu2_m</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>so4</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>EX_so4_m</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>pydx</td>\n",
+       "      <td>0.009822</td>\n",
+       "      <td>EX_pydx_m</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>57</th>\n",
+       "      <td>hco3</td>\n",
+       "      <td>47.615080</td>\n",
+       "      <td>EX_hco3_m</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>58</th>\n",
+       "      <td>arab_L</td>\n",
+       "      <td>21.314860</td>\n",
+       "      <td>EX_arab_L_m</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>59</th>\n",
+       "      <td>glc_D</td>\n",
+       "      <td>24.978352</td>\n",
+       "      <td>EX_glc_D_m</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>60</th>\n",
+       "      <td>lac_L</td>\n",
+       "      <td>28.308171</td>\n",
+       "      <td>EX_lac_L_m</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>61</th>\n",
+       "      <td>malt</td>\n",
+       "      <td>4.382121</td>\n",
+       "      <td>EX_malt_m</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>62 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   metabolite       flux     reaction\n",
+       "0          cl   4.300000      EX_cl_m\n",
+       "1         ca2   1.290106     EX_ca2_m\n",
+       "2         cu2   0.010000     EX_cu2_m\n",
+       "3         so4  10.000000     EX_so4_m\n",
+       "4        pydx   0.009822    EX_pydx_m\n",
+       "..        ...        ...          ...\n",
+       "57       hco3  47.615080    EX_hco3_m\n",
+       "58     arab_L  21.314860  EX_arab_L_m\n",
+       "59      glc_D  24.978352   EX_glc_D_m\n",
+       "60      lac_L  28.308171   EX_lac_L_m\n",
+       "61       malt   4.382121    EX_malt_m\n",
+       "\n",
+       "[62 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "os.chdir('/proj/gibbons/nbohmann/exvivo/venturelli_2021/')\n",
+    "os.chdir('../media')\n",
     "#load the components of the medium\n",
     "medium = pd.read_excel('DM38_components.xlsx')\n",
-    "#rename the columns of the medium for simplicity\n",
+    "# rename the columns of the medium for simplicity\n",
     "medium = medium.rename(columns={'Component':'metabolite','Concentration (mM)':'flux'}) \n",
     "#for use in MICOM, we need to add a prefix and suffix to each entry in the reaction column\n",
     "medium['reaction'] = 'EX_' + medium['metabolite'] + '_m' #reaction column\n",
-    "#previous work showed that iron is needed for growth, so we'll add that to the medium\n",
-    "medium = medium.append({'reaction':'EX_fe3_m','flux':0.50},ignore_index=True)\n",
-    "# medium.set_index('reaction',inplace = True)\n",
     "medium"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6f382b73-a610-4f18-b222-39007889d65f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "taxa_low"
    ]
   },
   {
@@ -208,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "5c4b0891-0c5c-496f-a4c7-be320b40f7a0",
    "metadata": {},
    "outputs": [],
@@ -221,8 +325,7 @@
     "taxa_low = low[taxa_low].drop(columns = ['B.cereus Fraction'])\n",
     "#isolate the optical density and measured butyrate of each sample and convert to a dict for future use\n",
     "OD_low = low['OD'].to_dict()\n",
-    "meas_but_low = low['Butyrate'].to_dict()\n",
-    "low"
+    "meas_but_low = low['Butyrate'].to_dict()"
    ]
   },
   {
@@ -237,16 +340,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "2a978164-150c-4b9f-95c0-369275a5a5bd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 882/882 [00:01<00:00, 503.34it/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">[15:01:42] </span><span style=\"color: #800000; text-decoration-color: #800000\">WARNING </span> Found existing models for <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">651</span> samples. Will skip those. Delete the output folder if <a href=\"file:///users/nbohmann/.local/lib/python3.8/site-packages/micom/workflows/build.py\" target=\"_blank\"><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">build.py</span></a><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">:</span><a href=\"file:///users/nbohmann/.local/lib/python3.8/site-packages/micom/workflows/build.py#95\" target=\"_blank\"><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">95</span></a>\n",
+       "<span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">           </span>         you would like me to rebuild them.                                                  <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">           </span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[2;36m[15:01:42]\u001b[0m\u001b[2;36m \u001b[0m\u001b[31mWARNING \u001b[0m Found existing models for \u001b[1;36m651\u001b[0m samples. Will skip those. Delete the output folder if \u001b]8;id=841213;file:///users/nbohmann/.local/lib/python3.8/site-packages/micom/workflows/build.py\u001b\\\u001b[2mbuild.py\u001b[0m\u001b]8;;\u001b\\\u001b[2m:\u001b[0m\u001b]8;id=60249;file:///users/nbohmann/.local/lib/python3.8/site-packages/micom/workflows/build.py#95\u001b\\\u001b[2m95\u001b[0m\u001b]8;;\u001b\\\n",
+       "\u001b[2;36m           \u001b[0m         you would like me to rebuild them.                                                  \u001b[2m           \u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "35689c8452844bdeab0b4dc2dd3053bf",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "IOPub message rate exceeded.\n",
+      "The Jupyter server will temporarily stop sending output\n",
+      "to the client in order to avoid crashing it.\n",
+      "To change this limit, set the config variable\n",
+      "`--ServerApp.iopub_msg_rate_limit`.\n",
+      "\n",
+      "Current values:\n",
+      "ServerApp.iopub_msg_rate_limit=1000.0 (msgs/sec)\n",
+      "ServerApp.rate_limit_window=3.0 (secs)\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">Running <span style=\"color: #f92672; text-decoration-color: #f92672\">━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━</span><span style=\"color: #3a3a3a; text-decoration-color: #3a3a3a\">╺━━━━</span> <span style=\"color: #800080; text-decoration-color: #800080\"> 89%</span> <span style=\"color: #008080; text-decoration-color: #008080\">0:06:04</span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "Running \u001b[38;2;249;38;114m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[38;5;237m╺\u001b[0m\u001b[38;5;237m━━━━\u001b[0m \u001b[35m 89%\u001b[0m \u001b[36m0:06:04\u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "os.chdir('/proj/gibbons/nbohmann/exvivo/venturelli_2021/')\n",
+    "os.chdir('../agora/data')\n",
     "#use the build table function to construct a taxonomy table\n",
     "taxonomy = build_table(taxa_low) \n",
     "#build the models from the taxonomy table with a cutoff of 0.001\n",
-    "manifest_low = micom.workflows.build(taxonomy, out_folder='/proj/gibbons/nbohmann/exvivo/venturelli_2021/low_richness',\n",
+    "manifest_low = micom.workflows.build(taxonomy, out_folder='../../models/invitro/low_richness',\n",
     "                                  model_db = None, cutoff=0.001, threads=10)\n",
     "\n",
     "#model_db equals none since we have included the file path for each GSM in the taxonomy table"
@@ -262,15 +431,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "20207163-83eb-4086-add9-d65b8f28342f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '../models'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [8], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mchdir\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m../models\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;66;03m#Read the manifest produced above\u001b[39;00m\n\u001b[1;32m      3\u001b[0m manifest_low \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_csv(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124minvitro/low_richness/manifest.csv\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '../models'"
+     ]
+    }
+   ],
    "source": [
+    "os.chdir('../models')\n",
     "#Read the manifest produced above\n",
-    "manifest_low = pd.read_csv('/proj/gibbons/nbohmann/exvivo/venturelli_2021/low_richness/manifest.csv')\n",
+    "manifest_low = pd.read_csv('invitro/low_richness/manifest.csv')\n",
+    "#fix the medium such that all samples can grow with a community growth rate of 0.3\n",
+    "medium_fixed = micom.workflows.fix_medium(manifest_low,'invitro/low_richness', medium, community_growth = 0.3, summarize = True)\n",
     "#grow the models, using the medium and a tradeoff value of 0.7\n",
-    "growth = micom.workflows.grow(manifest_low,'/proj/gibbons/nbohmann/exvivo/venturelli_2021/low_richness',medium,\n",
+    "growth = micom.workflows.grow(manifest_low,'invitro/low_richness',medium_fixed,\n",
     "                           tradeoff = 0.7, threads = 10)\n",
     "#isolate exchanges, and multiply the fluxes by abundances for absolute production\n",
     "exchanges = micom.measures.production_rates(growth)\n",
@@ -302,7 +486,6 @@
     "    but_low, aes(x = 'measured',y = 'predicted'))\n",
     "    +geom_point(size = 3, color = 'cadetblue')\n",
     "    +geom_smooth(method = 'lm', color = 'cadetblue',linetype =  '--')\n",
-    "    \n",
     "    +labs(x = 'Measured Production Rate ($\\dfrac{mmol}{h}$)', y = 'Predicted Production Rate ($\\dfrac{mmol}{gDW*h}$)')\n",
     "    +theme(text = element_text(size=15),panel_background=element_rect(fill = \"white\",\n",
     "                                colour = \"white\",size = 0.5, linetype = \"solid\"),\n",
@@ -373,11 +556,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.chdir('/proj/gibbons/nbohmann/exvivo/venturelli_2021/')\n",
+    "os.chdir('../agora/data')\n",
     "#build the taxonomy table using the build_table function\n",
     "taxonomy = build_table(taxa_high)\n",
     "#build models with a cutoff of 0.001\n",
-    "manifest_high = micom.workflows.build(taxonomy, out_folder=\"/proj/gibbons/nbohmann/exvivo/venturelli_2021/high_richness\",\n",
+    "manifest_high = micom.workflows.build(taxonomy, out_folder='../../models/invitro/high_richness',\n",
     "                                  model_db = None, cutoff=0.001, threads=20)"
    ]
   },
@@ -396,11 +579,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.chdir('/proj/gibbons/nbohmann/exvivo/venturelli_2021/')\n",
+    "os.chdir('../models')\n",
     "#load the manifest for the high richness communities\n",
-    "manifest_high = pd.read_csv('/proj/gibbons/nbohmann/exvivo/venturelli_2021/high_richness/manifest.csv')\n",
-    "#grow the models with the DM38 medium and a tradeoff of 0.7\n",
-    "growth = micom.workflows.grow(manifest_high,'/proj/gibbons/nbohmann/exvivo/venturelli_2021/high_richness',medium,\n",
+    "manifest_high = pd.read_csv('invitro/high_richness/manifest.csv')\n",
+    "#fix the medium such that all samples can grow with a community growth rate of 0.3\n",
+    "medium_fixed = micom.workflows.fix_medium(manifest_low,'invitro/high_richness', medium, community_growth = 0.3, summarize = True)\n",
+    "#grow the models, using the medium and a tradeoff value of 0.7\n",
+    "growth = micom.workflows.grow(manifest_low,'invitro/high_richness',medium_fixed,\n",
     "                           tradeoff = 0.7, threads = 10)\n",
     "exchanges = micom.measures.production_rates(growth)\n",
     "but_high = exchanges[exchanges.reaction.str.startswith('EX_but(e)')].rename(columns = {'flux':'predicted'})\n",
@@ -472,8 +657,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "but_low.to_csv('/proj/gibbons/nbohmann/exvivo/scfa_paper/venturelli_small_g.csv')\n",
-    "but_high.to_csv('/proj/gibbons/nbohmann/exvivo/scfa_paper/venturelli_big_g.csv')"
+    "os.chdir('../results')\n",
+    "but_low.to_csv('invitro_low.csv')\n",
+    "but_high.to_csv('invitro_high.csv')"
    ]
   }
  ],
